feat: add new collection pizzas
