# src/resources/pizzas/pizza.model.js
@@ -1,0 +1,22 @@
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+const { addMethods } = require('../../utils/toResponse');
+
+const PizzasSchema = new Schema(
+  {
+    group: { type: Number, required: true },
+    page: { type: Number, required: true },
+    key: String,
+    name: String,
+    composition: String,
+    image: String,
+    price: String,
+    weith: String,
+    isHit: Boolean
+  },
+  { collection: 'pizzas' }
+);
+
+addMethods(PizzasSchema);
+
+module.exports = mongoose.model('Pizzas', PizzasSchema);
